--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<html lang="fr">
 		<head>
 			<meta charset="utf-8">
+			<meta name="viewport" content="width=980" />
 			<link rel="stylesheet" type="text/css" href="css/style.css">
 			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,8 +48,10 @@
 				<div class="restaurants">
 				<div class="cards">
 					<a href="menu/la_palette_du_gout.html">
+						<div class="img-new">
 						<img src="maquettes_ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat proposés" />
 						<span>Nouveau</span>
+						</div>
 						<div class="contenant">
 						<p>
 							<strong>La palette du goût</strong><br />
@@ -63,8 +66,10 @@
 				</div>
 				<div class="cards">
 					<a href="menu/la_note_enchantee.html">
+						<div class="img-new">
 						<img src="maquettes_ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat proposés" />
 						<span>Nouveau</span>
+					</div>
 						<div class="contenant">
 						<p>
 							<strong>La note enchantée</strong><br />
@@ -106,7 +111,6 @@
 					</div>
 					</div>
 					</a>
-				</div>
 				</div>
 				</div>
 			</section>
